// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tier grammar can parse 20 to 29 1`] = `
Object {
  "id": 1,
  "is": true,
  "left": undefined,
  "right": undefined,
  "type": "match",
  "value": Array [
    "20 to 29",
  ],
}
`;

exports[`Tier grammar can parse sub^_region 1`] = `
Object {
  "id": 1,
  "is": true,
  "left": undefined,
  "right": undefined,
  "type": "match",
  "value": Array [
    "sub_region",
  ],
}
`;
